--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 
-			<label for="copyrated" id="copyrated">© 2021 Makishimu25050</label>
+			<label for="copyrated" id="copyrated">© 2021-2022 Makishimu25050</label>
 		</div>
 		<script src="script.js"></script>
 	</body>
