--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8">
-		<title>Chwick</title>
+		<title>Chwick переводчик</title>
 		<link href="styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" href="orc.png" type="image/x-icon">
 	</head>
