--- a/main.html
+++ b/main.html
@@ -33,10 +33,10 @@
 					<div class="buttonsPanel">
 						<img src="share.png" alt="" id="butShare" class="buttons"/> 
 						<img src="copy.png" alt="" id="butCopy" class="buttons"/> 
+						<img id="linkToGithub" src="goToGithub.png" alt="" id="butCopy" class="buttons"/> 
 					</div>
 				</div>
 			</div>
-
 			<label for="copyrated" id="copyrated">© 2021-2022 Makishimu25050</label>
 		</div>
 		<script src="script.js"></script>
