--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 		<link rel="shortcut icon" href="orc.png" type="image/x-icon">
 	</head>
 	<body>
+		<!--LiveInternet counter--><a href="https://www.liveinternet.ru/click"
+		target="_blank"><img id="licnt1DE9" width="88" height="31" style="border:0" 
+		title="LiveInternet: показано число просмотров и посетителей за 24 часа"
+		src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7"
+		alt=""/></a><script>(function(d,s){d.getElementById("licnt1DE9").src=
+		"https://counter.yadro.ru/hit?t52.6;r"+escape(d.referrer)+
+		((typeof(s)=="undefined")?"":";s"+s.width+"*"+s.height+"*"+
+		(s.colorDepth?s.colorDepth:s.pixelDepth))+";u"+escape(d.URL)+
+		";h"+escape(d.title.substring(0,150))+";"+Math.random()})
+		(document,screen)</script><!--/LiveInternet-->
 
 		<div class="container">
 			<h1 class="hand">Chwick переводчик</h1>
